<resources>
    <string name="app_name">MacFinalProj</string>
    <string name="title_activity_projects">ProjectsActivity</string>
    <string name="title_activity_tasks">TasksActivity</string>
    <string name="super_cool_project">Super cool project</string>
    <string name="cancel">Cancel</string>
    <string name="add">Add</string>
    <string name="language">Language</string>
    <string name="app_theme">Theme</string>
    <string name="language_desc">Changes the language</string>
    <string name="theme_desc">Changes the apps theme</string>
    <string name="projects_tab">Projects</string>
    <string name="settings_tab">Settings</string>
    <string name="invites_tab">Invites</string>
    <string name="accept_invite">Accept</string>
    <string name="dismiss_invite">Dismiss</string>
    <string name="project_owner">Owner</string>
    <string name="project_name">Name</string>
    <string name="project_name_hint">Project Name</string>
    <string name="project_description_hint">Description</string>
    <string name="empty_invites">No invitations</string>
    <string-array name="languages">
        <item>English</item>
        <item>Russian</item>
        <item>Spanish</item>
    </string-array>
    <string-array name="app_themes">
        <item>Light</item>
        <item>Dark</item>
    </string-array>
</resources>
